--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
+<h1>NAV</h1>
 <p style="text-align: center; background-color: white;">
     <a href="{{site.baseurl}}/">Home</a> |
     <a href="{{site.baseurl}}/profiles/">profiles</a> |
