--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen"
-        href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    {% include head-custom.html %}
+        href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">s
 </head>
 
 <body>
@@ -25,7 +24,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
         <section id="nav" class="nav">
-            {{ include nav.html }}
+            {% include nav.html %}
         </section>
         <section id="main_content" class="inner">
             {{ content }}
