--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,8 @@
 <h1>NAV</h1>
-<p style="text-align: center; background-color: white;">
-    <a href="{{site.baseurl}}/">Home</a> |
-    <a href="{{site.baseurl}}/profiles/">profiles</a> |
-    <a href="{{site.baseurl}}/profiles/taughet">Tau G'het</a> |
-</p>
+<ul>
+    <li><a href="{{site.baseurl}">Home</a></li>
+    <li><a href="{{site.baseurl}/profiles">Profiles</a></li>
+    {% for profile in site.profiles %}
+    <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
+    {% endfor %}
+</ul>
