Added title to page, cleaned up around the profiles parent.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
 <h1>NAV</h1>
 <ul>
     <li><a href="{{site.baseurl}}">Home</a></li>
-    <li><a href="{{site.baseurl}}/profiles">Profiles</a></li>
-    {% for profile in site.profiles %}
-    <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
-    {% endfor %}
+    <li><b>Profiles</b></li>
+    <ul>
+        {% for profile in site.profiles %}
+        <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
+        {% endfor %}
+    </ul>
 </ul>
