--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,7 @@
     <li><a href="{{site.baseurl}}">Home</a></li>
     <li><b>Profiles</b></li>
     <ul>
+        <li>testitem</li>
         {% for profile in site.profiles %}
         <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
         {% endfor %}
