--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <h1>NAV</h1>
 <ul>
-    <li><a href="{{site.baseurl}}">Home</a></li>
+    <li><a href="{{site.url}}">Home</a></li>
     <li><b>Profiles</b></li>
     <ul>
         {% for profile in site.profiles %}
-        <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
+        <li><a href="{{ profile.url }}">{{ profile.Title }}</a></li>
         {% endfor %}
     </ul>
 </ul>
