Standardize to lowercase title

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     <li><b>Profiles</b></li>
     <ul>
         {% for profile in site.profiles %}
-        <li><a href="{{ profile.url }}">{{ profile.Title }}</a></li>
+        <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
         {% endfor %}
     </ul>
 </ul>
