--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <div id="inner" class="inner" style="display:flex;">
-            <section id=" nav" class="nav" style="flex: 1 0 20%;">
+        <div id="inner" class="inner" style="display:flex;max-width: 1280px;">
+            <section id=" nav" class="nav" style="flex: 1 0 30%;">
                 {% include nav.html %}
             </section>
             <section id="main_content" class="inner" style="overflow-y: auto;">
