Attempt to add custom css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,11 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <div id="inner" class="inner" style="display:flex;max-width: 1280px;">
+        <div id="inner" class="inner">
             <section id=" nav" class="nav" style="flex: 1 0 30%;">
                 {% include nav.html %}
             </section>
-            <section id="main_content" class="inner" style="overflow-y: auto;">
+            <section id="main_content" class="inner, main" style="overflow-y: auto;">
                 {{ content }}
             </section>
         </div>
