Diferentiate builtin "inner" class and custom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,11 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-        <div id="inner" class="inner">
-            <section id=" nav" class="nav" style="flex: 1 0 30%;">
+        <div id="inner-box" class="inner-box">
+            <section id=" nav" class="nav">
                 {% include nav.html %}
             </section>
-            <section id="main_content" class="inner, main" style="overflow-y: auto;">
+            <section id="main_content" class="inner, main">
                 {{ content }}
             </section>
         </div>
