--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,11 +9,12 @@
     padding: 0 20px;
 }
 
-.inner-box {
+.flex_outer {
     display:flex;
     max-width: 1280px;
 }
 
+/*
 .nav {
     flex: 1 1 content;
     max-width: 300px;
@@ -22,4 +23,17 @@
 .main {
     overflow-y: auto;
     flex-grow: 4 4 auto;
+}
+*/
+
+.flex-inner {
+    width: 300px;
+}
+
+.main {
+    flex-grow: 1;
+}
+
+.flex-inner + .flex-inner {
+    margin-left: 2%;
 }
