--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,8 @@
         {% for profile in loaded_profiles | sort %}
         <li><a href="{{ profile.url }}">{{ profile.title }}</a></li>
         {% endfor %}
+    </ul>
+    <li><b>Reports</b></li>
         {% assign loaded_reports = site.reports | sort: "title" %}
         {% for report in loaded_reports | sort %}
         <li><a href="{{ report.url }}">{{ report.title }}</a></li>
